tests/correct/test-exprs3.py
print 3 if 2 else 1
print 2 if 0 else 4
