tests/error/test-bad-indent2.py
# Inconsistent indentation 2
if True:
    print 1
 print 2
